--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.15",
     "i": "^0.3.7",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "lucide-react": "^0.456.0",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
