--- a/server/.env
+++ b/server/.env
@@ -6,6 +6,8 @@ DATABASE_PORT=5432
 
 DATABASE_NAME=farmaceutical_trade_db
 
+DATABASE_URL=postgresql://farmaceutical_trade_db_user:vizrijgTYCi0dJx7C6Ek6TVPnrSSFEAN@dpg-csth2ulumphs73fon5cg-a.oregon-postgres.render.com/farmaceutical_trade_db
+
 SECRET_KEY=cat123
 
 JWT_LIFETIME=1h
